Poll sharing image generate & custom upload api and Latast suggests text changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
     <!-- Using Local Font -->
     <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" /> -->
 
-    <title>mic.vote</title>
+    <title>Upplaud</title>
     <meta name="author" content="Podasq" />
     <meta name="keywords" content="podasq, guestii, podcasts, brander, videosocials" />
     <meta
